# credis

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.base  Dockerfile.build  Dockerfile.member  FindLevelDB.cmake  Procfile  README.md  docker-compose.yml  redis-cli  redis-server  run-member.sh  start-etcd.sh  throughput_stats.ipynb
docker/member/: Dockerfile
protos/: Makefile  auth.proto  kv.proto  lease.proto  raft.proto  rpc.proto  setup.sh  strip_dependencies.py  v3election.proto  v3lock.proto
protos/src/: auth_mock.grpc.pb.h  etcdserver_mock.grpc.pb.h  kv_mock.grpc.pb.h  lease_mock.grpc.pb.h  raft_mock.grpc.pb.h  record_mock.grpc.pb.h  rpc_mock.grpc.pb.h  snap_mock.grpc.pb.h  v3election_mock.grpc.pb.h  v3lock_mock.grpc.pb.h
src/: CMakeLists.txt  chain.cc  chain.h  client.cc  client.h  coordinator.cc  coordinator.h  credis_seqput_bench.cc  etcd_master.cc  etcd_master.h  master.cc  master_client.cc  master_client.h  member.cc  redis_master_client.cc  redis_master_client.h  run_coordinator.cc  run_etcd_master.cc  timer.cc  timer.h  utils.cc  utils.h
src/benchmarks/: credis_parput_bench.cc  credis_seqput_bench.cc  redis_parput_bench.cc  redis_seqput_bench.cc
src/etcd/: CMakeLists.txt  etcd.cc  etcd.h  etcd_master_client.cc  etcd_master_client.h  etcd_utils.cc  etcd_utils.h
src/etcd/master/: etcd_master.cc  etcd_master.h  etcd_master_module.cc  heartbeat_monitor.cc
src/test/: CMakeLists.txt  test_chain.cc  test_coordinator.cc  test_etcd.cc
tests/: common.py  demo.py  seqput.py  test.py
